guestbook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: guestbook-demo
spec:
  selector:
    app.kubernetes.io/name: guestbook-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
